use mixin to style the drawer and container

--- a/src/app/widget/sidebar/sidebar.component.html
+++ b/src/app/widget/sidebar/sidebar.component.html
@@ -1,3 +1,3 @@
 <ng-content select="[sidebar-drawer]"></ng-content>
-<span class="resizer"></span>
+<span class="resizer" *ngIf="resizable"></span>
 <ng-content select="[sidebar-container]"></ng-content>
