--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.scss
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.scss
@@ -1,18 +1,15 @@
-@import 'mixins';
+@import "mixins";
 
 :host {
   display: flex;
   flex-direction: column;
   min-height: 99%;
-  .folder-title {
-    font-size: inherit;
-    margin: inherit;
-    & + mat-icon {
-      height: 20px;
-      font-size: 20px;
-      width: 20px;
-      line-height: 20px;
-    }
+  .action-button {
+    padding: 0;
+    height: 50px;
+    max-width: 40px;
+    min-width: 40px;
+    width: 40px;
   }
   mat-nav-list {
     overflow: auto;
