--- a/src/app/pages/media-hub/media-lightbox/media-lightbox.component.scss
+++ b/src/app/pages/media-hub/media-lightbox/media-lightbox.component.scss
@@ -1,3 +1,4 @@
+@import "mixins";
 :host {
     nav {
         z-index: 1;
@@ -18,6 +19,7 @@
     }
     object,
     img {
+        width: 100%;
         z-index: 1;
     }
     .blur-area {
@@ -35,6 +37,20 @@
             width: 100%;
             height: 100%;
             display: block;
+        }
+    }
+    footer {
+        height: 14%;
+        @include scrollbar_theme(3px, 3px, gray);
+        img {
+            height: 100px;
+            width: 100px;
+            border: 3px solid transparent;
+            transition: border-color 0.15s;
+            will-change: border-color;
+            &:hover {
+                border-color: gray;
+            }
         }
     }
 }
