enhance more button ui

--- a/src/app/pages/chat/chat-card/chat-card.component.scss
+++ b/src/app/pages/chat/chat-card/chat-card.component.scss
@@ -6,6 +6,7 @@
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
   right: inherit;
+  z-index: 1;
 
   mat-card {
     border-top-right-radius: 15px;
