--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.scss
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.scss
@@ -4,12 +4,16 @@
   display: flex;
   flex-direction: column;
   min-height: 99%;
-  .action-button {
-    padding: 0;
-    height: 50px;
-    max-width: 40px;
-    min-width: 40px;
-    width: 40px;
+  mat-list-item {
+    $button_width: 40px;
+    width: calc(100% - #{$button_width}) !important;
+    & + .action-button {
+      padding: 0;
+      height: 50px;
+      max-width: $button_width;
+      min-width: $button_width;
+      width: $button_width;
+    }
   }
   mat-nav-list {
     overflow: auto;
