--- a/src/app/pages/media-hub/media-hub-header/media-hub-header.component.html
+++ b/src/app/pages/media-hub/media-hub-header/media-hub-header.component.html
@@ -10,13 +10,14 @@
             <button mat-stroked-button tabindex="-1">Upload</button>
         </app-file-control>
         <div class="d-flex align-items-center mx-2">
-            <button mat-icon-button class="view-icon" (click)="listView()">
-                <mat-icon>list</mat-icon>
-            </button>
-            <span class="toolbar-seperator mx-1"></span>
-            <button mat-icon-button class="view-icon" (click)="gridView()">
-                <mat-icon>grid_on</mat-icon>
-            </button>
+            <mat-button-toggle-group (change)="changeView($event)" name="view_type" aria-label="Font Style">
+                <mat-button-toggle [value]="EMediaHubViews.GridView">
+                    <mat-icon>grid_on</mat-icon>
+                </mat-button-toggle>
+                <mat-button-toggle [value]="EMediaHubViews.ListView">
+                    <mat-icon>list</mat-icon>
+                </mat-button-toggle>
+            </mat-button-toggle-group>
         </div>
     </div>
 </header>
