--- a/src/app/layout/components/navbar-item/navbar-item.component.html
+++ b/src/app/layout/components/navbar-item/navbar-item.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center">
-  <ng-container *ngTemplateOutlet="collapse ? collapsed: normalItem;"></ng-container>
+  <ng-container *ngTemplateOutlet="collapse ? collapsedItem: normalItem;"></ng-container>
 </div>
 
 <ng-template #normalItem>
@@ -22,7 +22,7 @@
   </a>
 </ng-template>
 
-<ng-template #collapsed>
+<ng-template #collapsedItem>
   <button mat-button class="d-flex align-items-center w-100 pointer rounded-0 navbar-item py-2 px-4">
     <ng-container *ngTemplateOutlet="title"></ng-container>
   </button>
