--- a/src/app/pages/media-hub/media-lightbox/media-lightbox.component.scss
+++ b/src/app/pages/media-hub/media-lightbox/media-lightbox.component.scss
@@ -1,4 +1,4 @@
-@import "mixins";
+@import 'mixins';
 :host {
     nav {
         z-index: 1;
@@ -14,7 +14,7 @@
         min-width: $size;
         width: $size;
         height: $size;
-        padding: 0rem;
+        padding: 0;
         border-radius: $size;
     }
     object,
@@ -27,12 +27,11 @@
         position: absolute;
         width: 100%;
         top: 0;
-        background-image: url(http://localhost:8080/5e88adf5ec796826da298876/upload-1586022012791.jpg);
         background-size: cover;
         filter: brightness(0.5) blur(10px);
 
         &::before {
-            content: "";
+            content: '';
             background-color: #00000078;
             width: 100%;
             height: 100%;
