--- a/src/app/pages/chat/chat-card-footer/chat-card-footer.component.html
+++ b/src/app/pages/chat/chat-card-footer/chat-card-footer.component.html
@@ -25,11 +25,15 @@
     </button>
     <div class="mh-100 d-flex flex-column w-100 textarea-wrapper align-self-stretch border-radius-1">
         <div *ngIf="base64Files.length" class="d-flex pt-3 px-2 overflow-auto flex-fill">
-            <div class="img-box mx-1 position-relative" *ngFor="let file of base64Files; let index = index;">
+            <div class="attachment-box mx-1 position-relative" *ngFor="let file of files; let index = index;">
                 <mat-icon (click)="disposeFile(index)"
-                    class="pointer text-muted position-absolute bg-white border-radius-1">
-                    close</mat-icon>
-                <img class="img-fluid h-100 border-radius-1" [src]="file | async">
+                    class="pointer text-muted position-absolute bg-white border-radius-1">close
+                </mat-icon>
+                <img *ngIf="isImage(file.name); else documentType" class="img-fluid h-100 border-radius-1"
+                    [src]="base64Files[index] | async">
+                <ng-template #documentType>
+                    <p class="bg-white px-2 mb-0 border-radius-1 text-truncate document-name">{{file.name}}</p>
+                </ng-template>
             </div>
         </div>
         <div class="d-flex align-items-center px-2">
