added name to media sidebar

--- a/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.html
+++ b/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.html
@@ -2,7 +2,7 @@
 
 <mat-divider></mat-divider>
 
-<app-sidebar>
+<app-sidebar name="media">
     <div sidebar-drawer>
         <app-media-hub-folders></app-media-hub-folders>
     </div>
