--- a/src/app/_app.theme.scss
+++ b/src/app/_app.theme.scss
@@ -1,9 +1,10 @@
-@import '~@angular/material/theming';
-@import 'functions';
-@import 'variables';
-@import 'layout/layout.theme';
-@import 'pages/portal/portal.theme';
-@import 'widget/upload-file/upload-file.theme';
+@import "~@angular/material/theming";
+@import "functions";
+@import "variables";
+@import "layout/layout.theme";
+@import "pages/portal/portal.theme";
+@import "pages/chat/chat.theme";
+@import "widget/upload-file/upload-file.theme";
 
 @include mat-core();
 
@@ -12,6 +13,7 @@
   @include theme_classes($theme);
   @include layout_theme($theme);
   @include portal_theme($theme);
+  @include chat_theme($theme);
   @include upload_file($theme);
 }
 
