--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -1,6 +1,6 @@
 // All scss mixins must be here, expand the mixins into folder if the file has a huge line
-@import '~bootstrap/scss/bootstrap-grid';
-@import 'variables';
+@import "~bootstrap/scss/bootstrap-grid";
+@import "variables";
 
 @mixin placeholder {
   &::-webkit-input-placeholder {
@@ -92,7 +92,7 @@
   position: $position;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: 1;
   width: 100%;
 }
 
@@ -129,7 +129,7 @@
     height: 100%;
     background-color: $color;
     z-index: $zIndex;
-    content: '';
+    content: "";
   }
 }
 
