move chat element utils to base card

--- a/src/app/pages/chat/chat-group-card/chat-group-card.component.html
+++ b/src/app/pages/chat/chat-group-card/chat-group-card.component.html
@@ -15,9 +15,8 @@
     </div>
 
     <ng-container card-content>
-        <app-chat-card-messages #messagesWrapper [id]="data._id"> </app-chat-card-messages>
-        <app-chat-card-footer [room]="data"
-            (onActionBarVisibilityChange)="updateScroll($event, messagesWrapper.element)">
+        <app-chat-card-messages [id]="data._id"> </app-chat-card-messages>
+        <app-chat-card-footer [room]="data" (onActionBarVisibilityChange)="updateScroll()">
         </app-chat-card-footer>
     </ng-container>
 </app-chat-card>
