--- a/src/app/pages/media-hub/media-lightbox/media-lightbox.component.scss
+++ b/src/app/pages/media-hub/media-lightbox/media-lightbox.component.scss
@@ -1,12 +1,12 @@
-@import 'mixins';
+@import "mixins";
 :host {
-    nav {
-        z-index: 1;
-    }
     app-sidebar {
         --width: 300px;
         > section {
             background-color: #312e2e;
+            > * {
+                z-index: 0;
+            }
         }
     }
     .toolbar-button {
@@ -17,10 +17,15 @@
         padding: 0;
         border-radius: $size;
     }
-    object,
-    img {
-        width: 100%;
-        z-index: 1;
+    .file-wrapper {
+        height: calc(100% - 200px);
+        object {
+            width: 100%;
+            height: 100%;
+        }
+        img {
+            max-height: 100%;
+        }
     }
     .blur-area {
         height: 100%;
@@ -31,7 +36,7 @@
         filter: brightness(0.5) blur(10px);
 
         &::before {
-            content: '';
+            content: "";
             background-color: #00000078;
             width: 100%;
             height: 100%;
@@ -41,15 +46,22 @@
     footer {
         height: 14%;
         @include scrollbar_theme(3px, 3px, gray);
-        img {
-            height: 100px;
-            width: 100px;
+        .footer-file {
             border: 3px solid transparent;
             transition: border-color 0.15s;
             will-change: border-color;
+            overflow: auto;
             &:hover {
                 border-color: gray;
             }
+        }
+        img {
+            height: 100px;
+            width: 100px;
+        }
+        .non-image-file {
+            height: 70%;
+            width: 20%;
         }
     }
 }
