--- a/src/app/pages/chat/message-bubble/message-bubble.component.html
+++ b/src/app/pages/chat/message-bubble/message-bubble.component.html
@@ -1,6 +1,6 @@
-<ng-container *ngIf="message.rawFile || isFile(); else textViewer">
-    <app-file-viewer [src]="message.text" [withLoader]="false" [rawFile]="message.rawFile" [folder]="message.room"
-        class="pointer w-50" [class.ml-auto]="isSender" (onUpload)="sendMessage($event.path)">
+<ng-container *ngIf="isFile(); else textViewer">
+    <app-file-viewer [withLoader]="false" [file]="file" class="pointer w-50" [class.ml-auto]="isSender"
+        (onUpload)="sendMessage($event.path)">
     </app-file-viewer>
 </ng-container>
 <ng-template #textViewer>
