--- a/src/app/layout/components/navbar-item/navbar-item.component.scss
+++ b/src/app/layout/components/navbar-item/navbar-item.component.scss
@@ -1,5 +1,5 @@
-@import '~@angular/material/theming';
-@import 'functions';
+@import "~@angular/material/theming";
+@import "functions";
 :host {
   display: block;
   .navbar-item {
@@ -9,9 +9,6 @@
       .mat-button-wrapper {
         width: 100%;
       }
-    }
-    &__pin {
-      display: none;
     }
   }
   &:hover {
