add function to dynamicaly add validators

--- a/src/app/partials/form/form-factory/form-factory.component.html
+++ b/src/app/partials/form/form-factory/form-factory.component.html
@@ -92,7 +92,7 @@
             ...fieldOptions
         });
     } -->
-    <app-mobile-control [id]="field.id" [formControl]="field"></app-mobile-control>
+    <app-mobile-control [formControl]="field"></app-mobile-control>
 </ng-container>
 <ng-container *ngIf="field.typeOf(types.COUNTRY)">
     <app-country-control [id]="field.id" [formControl]="field"></app-country-control>
