add tryRefreshToken function

--- a/src/app/pages/chat/_chat.theme.scss
+++ b/src/app/pages/chat/_chat.theme.scss
@@ -1,4 +1,4 @@
-@import "functions";
+@import 'functions';
 @mixin chat_theme($theme) {
     .loader {
         $color: get_color_from_theme(primary, $theme);
