--- a/src/app/pages/chat/message-bubble/message-bubble.component.scss
+++ b/src/app/pages/chat/message-bubble/message-bubble.component.scss
@@ -4,7 +4,7 @@
         align-self: flex-end;
     }
     .loader,
-    .loader:after {
+    .loader::after {
         border-radius: 50%;
         width: 10em;
         height: 10em;
