--- a/src/app/pages/media-hub/media-lightbox/media-lightbox.component.scss
+++ b/src/app/pages/media-hub/media-lightbox/media-lightbox.component.scss
@@ -1,4 +1,4 @@
-@import "mixins";
+@import 'mixins';
 :host {
     app-sidebar {
         --width: 300px;
@@ -36,7 +36,7 @@
         filter: brightness(0.5) blur(10px);
 
         &::before {
-            content: "";
+            content: '';
             background-color: #00000078;
             width: 100%;
             height: 100%;
