--- a/src/app/partials/file-viewer/file-viewer.component.scss
+++ b/src/app/partials/file-viewer/file-viewer.component.scss
@@ -1,11 +1,11 @@
-@import "mixins";
+@import 'mixins';
 :host {
     position: relative;
     display: block;
     &.uploading {
         @include backdrop(absolute, 0);
         .loader,
-        .loader:after {
+        .loader::after {
             border-radius: 50%;
             width: 10em;
             height: 10em;
