--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
-@import "~bootstrap/scss/bootstrap.scss";
-@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
-@import "./app/app.theme";
-@import "assets/scss/main";
-@import "~@ctrl/ngx-emoji-mart/picker";
+@import '~bootstrap/scss/bootstrap.scss';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import './app/app.theme';
+@import 'assets/scss/main';
+@import '~@ctrl/ngx-emoji-mart/picker';
 
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap');
 $typography: mat-typography-config(
   $font-family: "'Quicksand', sans-serif",
   $input: mat-typography-level(16px, 1.125, 400),
