--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
@@ -25,7 +25,7 @@
     <ng-container *ngFor="let folder of folders; let index = index;">
         <div class="d-flex justify-content-between align-items-center">
             <mat-list-item (click)="onFolderClick(folder)">
-                <mat-icon mat-list-icon text-muted>
+                <mat-icon mat-list-icon class="text-muted">
                     {{currentFolderID !== folder._id ? 'folder' : 'folder_open'}}
                 </mat-icon>
                 <h5 mat-line class="text-truncate"> {{folder.name}}</h5>
