--- a/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.html
+++ b/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.html
@@ -6,12 +6,12 @@
     <div sidebar-drawer>
         <app-media-hub-folders></app-media-hub-folders>
     </div>
-    <div sidebar-container class="p-3">
+    <div #sidebarContainer sidebar-container class="test p-3">
         <ng-container *ngIf="currentView === EmediaHubViews.GridView">
-            <app-media-hub-grid-view [files]="files"></app-media-hub-grid-view>
+            <app-media-hub-grid-view [parentSelector]="sidebarContainer"></app-media-hub-grid-view>
         </ng-container>
         <ng-container *ngIf="currentView === EmediaHubViews.ListView">
-            <app-media-hub-list-view [files]="files"></app-media-hub-list-view>
+            <app-media-hub-list-view [files]="[]"></app-media-hub-list-view>
         </ng-container>
     </div>
 </app-sidebar>
