used infinity scroll within lightbox

--- a/src/app/widget/inifinite-scroll/inifinite-scroll.component.html
+++ b/src/app/widget/inifinite-scroll/inifinite-scroll.component.html
@@ -1,3 +1,4 @@
-<app-scroll-detection (onScroll)="onScroll($event)" [scrollContainerSelector]="scrollContainerSelector">
+<app-scroll-detection [horizontal]="horizontal" (onScroll)="onScroll($event)"
+    [scrollContainerSelector]="scrollContainerSelector">
     <ng-content></ng-content>
 </app-scroll-detection>
