--- a/src/app/pages/media-hub/media-lightbox/media-lightbox.component.html
+++ b/src/app/pages/media-hub/media-lightbox/media-lightbox.component.html
@@ -10,29 +10,34 @@
             </button>
         </nav>
         <div class="file-wrapper text-center">
-            <ng-container *ngIf="show">
+            <ng-container>
                 <object *ngIf="dialogData.file.isPdf()"
                     [attr.data]="(dialogData.file.fullPath) | safe:'resourceUrl'"></object>
                 <img class="img-fluid" *ngIf="dialogData.file.isImage()" [src]="dialogData.file.fullPath"
                     [alt]="dialogData.file.name">
             </ng-container>
         </div>
-        <footer class="d-flex align-items-center overflow-auto">
-            <ng-container *ngFor="let file of ($files | async)">
-                <div role="button" (click)="selectFile(file)" class="border-radius-1 mr-1 pointer footer-file">
-                    <img *ngIf="file.isImage(); else textView" [src]=" file.fullPath" [alt]="file.name">
-                    <ng-template #textView>
-                        <h6 class="mb-0 p-2 bg-white">{{file.name}}</h6>
-                    </ng-template>
-                </div>
-            </ng-container>
-        </footer>
+        <app-inifinite-scroll [horizontal]="true" (dataChange)="appendFiles($event)" [provider]="$provider"
+            [scrollContainerSelector]="footer">
+            <footer #footer class="d-flex align-items-center overflow-auto">
+                <ng-container *ngFor="let file of files">
+                    <div role="button" (click)="selectFile(file)" class="border-radius-1 mr-1 pointer footer-file">
+                        <img class="w-100 h-100" *ngIf="file.isImage(); else textView" [src]=" file.fullPath"
+                            [alt]="file.name">
+                        <ng-template #textView>
+                            <h6 class="mb-0 p-2 bg-white">{{file.name}}</h6>
+                        </ng-template>
+                    </div>
+                </ng-container>
+            </footer>
+        </app-inifinite-scroll>
     </section>
     <aside sidebar-drawer>
         <mat-nav-list class="h-100" dense>
             <h3 mat-subheader class="text-truncate"> {{dialogData.file.name}} </h3>
             <mat-list-item (click)="openFolder(folder)" *ngFor="let folder of ($folders | async)">
-                <mat-icon mat-list-icon text-muted> folder </mat-icon>
+                <mat-icon mat-list-icon class="text-muted">
+                    {{dialogData.folder !== folder._id ? 'folder' : 'folder_open'}}</mat-icon>
                 <h4 mat-line class=""> {{folder.name}}</h4>
             </mat-list-item>
         </mat-nav-list>
