--- a/src/app/pages/media-hub/media-lightbox/media-lightbox.component.scss
+++ b/src/app/pages/media-hub/media-lightbox/media-lightbox.component.scss
@@ -1,4 +1,4 @@
-@import 'mixins';
+@import "mixins";
 :host {
     app-sidebar {
         --width: 300px;
@@ -36,7 +36,7 @@
         filter: brightness(0.5) blur(10px);
 
         &::before {
-            content: '';
+            content: "";
             background-color: #00000078;
             width: 100%;
             height: 100%;
@@ -54,14 +54,8 @@
             &:hover {
                 border-color: gray;
             }
-        }
-        img {
+            flex: 0 0 17%;
             height: 100px;
-            width: 100px;
-        }
-        .non-image-file {
-            height: 70%;
-            width: 20%;
         }
     }
 }
