--- a/src/app/pages/chat/message-bubble/message-bubble.component.scss
+++ b/src/app/pages/chat/message-bubble/message-bubble.component.scss
@@ -3,6 +3,13 @@
     &.sender {
         align-self: flex-end;
     }
+
+    app-file-viewer {
+        &.is-image {
+            width: 50%;
+        }
+    }
+
     .loader,
     .loader::after {
         border-radius: 50%;
