--- a/src/app/pages/chat/message-bubble/message-bubble.component.html
+++ b/src/app/pages/chat/message-bubble/message-bubble.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="isFile(); else textViewer">
-    <app-file-viewer [withLoader]="false" [file]="file" class="pointer w-50" [class.ml-auto]="isSender"
-        (onUpload)="sendMessage($event.path)">
+    <app-file-viewer [withLoader]="false" [file]="file" class="pointer shadow-sm border rounded"
+        [class.ml-auto]="isSender" (onUpload)="sendMessage($event.path)">
     </app-file-viewer>
 </ng-container>
 <ng-template #textViewer>
