--- a/src/app/pages/media-hub/media-hub-header/media-hub-header.component.html
+++ b/src/app/pages/media-hub/media-hub-header/media-hub-header.component.html
@@ -9,13 +9,13 @@
         <app-file-control (onChange)="uploadFiles($event)">
             <button mat-stroked-button tabindex="-1" [disabled]="!($folder | async)">Upload</button>
         </app-file-control>
-        <div class="d-flex align-items-center mx-2">
+        <!-- <div class="d-flex align-items-center mx-2">
             <button mat-flat-button (click)="changeView(EMediaHubViews.GridView)">
                 <mat-icon>grid_on</mat-icon>
             </button>
             <button mat-flat-button (click)="changeView(EMediaHubViews.ListView)">
                 <mat-icon>list</mat-icon>
             </button>
-        </div>
+        </div> -->
     </div>
 </header>
