--- a/src/app/pages/media-hub/media-card/media-card.component.scss
+++ b/src/app/pages/media-hub/media-card/media-card.component.scss
@@ -1,4 +1,4 @@
-:host {
+app-media-card {
   position: relative;
   display: block;
   .title {
@@ -38,5 +38,11 @@
         display: block;
       }
     }
+  }
+}
+.card-menu {
+  .tag-circle {
+    width: 20px;
+    height: 20px;
   }
 }
