make action list dense

--- a/src/app/pages/media-hub/media-card/media-card.component.html
+++ b/src/app/pages/media-hub/media-card/media-card.component.html
@@ -20,7 +20,7 @@
 
 </mat-card>
 <mat-menu #menu="matMenu" class="card-menu">
-    <mat-nav-list>
+    <mat-nav-list dense>
         <mat-list-item (click)="renameFile()">
             <mat-icon>text_format</mat-icon>
             <span class="text-muted">Rename</span>
