--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
@@ -30,8 +30,7 @@
                 </mat-icon>
                 <h5 mat-line class="text-truncate"> {{folder.name}}</h5>
             </mat-list-item>
-            <button *ngIf="!isShared" class="action-button"
-                (click)="$event.preventDefault();$event.stopImmediatePropagation();" mat-flat-button
+            <button *ngIf="!isShared" class="action-button" (click)="preventDefaults($event)" mat-flat-button
                 [matMenuTriggerFor]="menu" [matMenuTriggerData]="{folder: folder, index: index}">
                 <mat-icon class="text-muted">more_vert</mat-icon>
             </button>
