--- a/src/app/pages/chat/message-bubble/message-bubble.component.html
+++ b/src/app/pages/chat/message-bubble/message-bubble.component.html
@@ -11,4 +11,4 @@
     }">{{message.text}}</div>
 </ng-template>
 
-<div *ngIf="loading" class="loader"></div>
+<div *ngIf="loading" matTooltip="Sending" class="loader"></div>
