--- a/src/app/pages/media-hub/media-card/media-card.component.html
+++ b/src/app/pages/media-hub/media-card/media-card.component.html
@@ -9,7 +9,7 @@
         <div class="d-flex align-items-center justify-content-between">
             <div class="w-75">
                 <h6 class="title">{{file.name}}</h6>
-                <span class="text-uppercase bg-secondary mr-1 roundeds p-1">{{file.type}}</span>
+                <span class="text-uppercase bg-secondary mr-1 roundeds p-1">{{file.shortType}}</span>
                 <span class="text-uppercase">{{file.size / 1000 || ''}} kb</span>
             </div>
             <button *ngIf="showMenu" [disabled]="!!file.rawFile" mat-icon-button [matMenuTriggerFor]="menu">
@@ -17,7 +17,6 @@
             </button>
         </div>
     </mat-card-content>
-
 </mat-card>
 <mat-menu #menu="matMenu" class="card-menu">
     <mat-nav-list dense>
@@ -30,7 +29,7 @@
             <span class="text-muted">Delete</span>
         </mat-list-item>
         <h3 matSubheader>Tags</h3>
-        <button (click)="tagFile($event, tag)" mat-icon-button *ngFor="let tag of ($tags | async)"
+        <button (click)="tagFile(tag)" mat-icon-button *ngFor="let tag of ($tags | async)"
             class="border-radius-10 tag-circle mx-1" [style.background-color]="tag.color">
         </button>
     </mat-nav-list>
