--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
@@ -6,7 +6,7 @@
         </button>
     </div>
     <mat-divider></mat-divider>
-    <ng-container *ngIf="createFolderActive && !isShared">
+    <ng-container *ngIf="createFolderActive && !($sharedView | async)">
         <div class="px-3">
             <mat-form-field appearance="legacy">
                 <mat-hint>Folder name...</mat-hint>
@@ -24,14 +24,14 @@
 <mat-nav-list dense class="flex-fill">
     <ng-container *ngFor="let folder of folders; let index = index;">
         <div class="d-flex justify-content-between align-items-center">
-            <mat-list-item (click)="onFolderClick(folder)">
+            <mat-list-item (click)="filterByFolder(folder)">
                 <mat-icon mat-list-icon class="text-muted">
                     {{currentFolderID !== folder._id ? 'folder' : 'folder_open'}}
                 </mat-icon>
                 <h5 mat-line class="text-truncate"> {{folder.name}}</h5>
             </mat-list-item>
-            <button *ngIf="!isShared" class="action-button" (click)="preventDefaults($event)" mat-flat-button
-                [matMenuTriggerFor]="menu" [matMenuTriggerData]="{folder: folder, index: index}">
+            <button *ngIf="!($sharedView | async)" class="action-button" (click)="preventDefaults($event)"
+                mat-flat-button [matMenuTriggerFor]="menu" [matMenuTriggerData]="{folder: folder, index: index}">
                 <mat-icon class="text-muted">more_vert</mat-icon>
             </button>
         </div>
